Fix navigation and hero on smaller devices

--- a/resources/assets/styles/front/_layout.scss
+++ b/resources/assets/styles/front/_layout.scss
@@ -19,12 +19,26 @@
    margin-top: -135px;
 
    background-image: url(../images/hero.jpg);
+
+   @media(max-width: 460px) {
+      height: auto;
+
+      padding: 0 0 50px;
+      margin-top: 0;
+
+      background-image: none;
+      background-color: #000;
+   }
 }
 
 .hero-content {
    width: 75%;
 
    color: #fff;
+
+   @media(max-width: 460px) {
+      width: 100%;
+   }
 }
 
 .hero-title {
@@ -33,6 +47,10 @@
    font-size: 78px;
 
    color: #fff;
+
+   @media(max-width: 460px) {
+      font-size: 42px;
+   }
 }
 
 .hero-subtitle {
