--- a/resources/assets/styles/front/components/_navigation.scss
+++ b/resources/assets/styles/front/components/_navigation.scss
@@ -1,3 +1,9 @@
+.header {
+  @media(max-width: 460px) {
+    background-color: #000;
+  }
+}
+
 .navbar {
   padding: 20px;
 
