--- a/resources/assets/styles/front/project-elements/_buttons.scss
+++ b/resources/assets/styles/front/project-elements/_buttons.scss
@@ -16,6 +16,10 @@
 
       text-decoration: none;
    }
+
+   @media(max-width: 460px) {
+      margin-right: 20px;
+   }
 }
 
 .hero-link--primary {
